Fix incorrect alignment of top nav buttons

--- a/museum_site/static/css/low-res.css
+++ b/museum_site/static/css/low-res.css
@@ -135,6 +135,8 @@
         font-size:20px;
         background-color:var(--ega-darkblue);
         color:var(--ega-yellow);
+        flex:1;
+        height:auto;
     }
 
     #low-res-shortcuts input[type=button]:hover
